# samui

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build_debug.bat  compile_commands.json  conanfile.txt  make_debug.bat  setup.bat  xmake.lua
demo/: main.cpp  xmake.lua
demo/console/: main.cpp  xmake.lua
demo/demo_imgui/: main.cpp  xmake.lua
demo/game/: game2d.h  main.cpp  xmake.lua
demo/graphics/: main.cpp  xmake.lua
demo/rendering/: camera.cpp  camera.h  main.cpp  model.h  xmake.lua
demo/snake/: game2d.h  main.cpp  snake.cpp  snake.h  sprite_atlas.h  xmake.lua
docs/: overview.md
docs/design/: book.toml
scripts/engine/: samui.py
scripts/tasks/: c_cpp_properties.json  deep_clean.lua  init_env.lua  install_sdk.lua  make_install_sdk.lua  make_sdk.lua  make_sdk.py  reset.lua  vs_project.lua  vsc_cc.lua
scripts/vscode/: launch.json  tasks.json
src/: application.cpp  application.h  core.cpp  core.h  entrypoint.h  imconfig.h  imgui_layer.cpp  imgui_layer.h  layer.h  layer_stack.h  log.cpp  pch.h  samui.h  window.h  windows_window.cpp  windows_window.h  xmake.lua
src/common/: Application.cpp  Camera.h  gl_errors.h
src/core/: application.cpp  application.h  core.h  entrypoint.h  input.h  keycodes.h  opengl_shader.cpp  opengl_shader.h  pch.h  shader.cpp  shader.h  timestep.h  window.h  windows_input.cpp  windows_input.h  windows_window.cpp  windows_window.h
src/debug/: instrumentor.h
src/demo/: xmake.lua
templates/: xmake.lua
test/: freetype.cpp  freetype.h  serialization.cpp  serialization.h  test.cpp  xmake.lua
(+337 files in other folders)
